--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 # datasource
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:h2-console
+
+# Verificar no log do spring - o.s.b.a.h2.H2ConsoleAutoConfiguration    : H2 console available at '/h2-console'.
+# jdbc:h2:mem:d76f61ab-ad38-469a-b2ee-60d57fee6a92
+spring.datasource.url=jdbc:h2:mem:testdb 
 spring.datasource.username=sa
 spring.datasource.password=
 
